src/App.css
.app {
  background: teal;
  padding: 30px;
  height: 100vh;
  
}

.todo-list {
  background: #e8e8e8;
  border-radius: 5px;
  padding: 5px;
  max-height: 400px;
}

.todo {
  background-color: #fff;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1.5);
  padding: 3px 10px;
  font-size: 12px;
  margin-bottom: 6px;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.input {
  width: 100%;
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: none;
  padding: 1rem;
  height: 2.25em;
}

